# biorce-mini

./: .env.example  .gitignore  LICENSE  README.md  ingest.py  pyproject.toml  requirements.txt  streamlit_app.py
.claude/commands/: demo.create-adr.md  demo.create-skill.md  demo.create-weekly-tags.md  demo.pr-sync.md  demo.scaffold-feature.md  demo.smart-commit.md  demo.update-dependencies.md
.claude/skills/: README.md
.claude/skills/common-git/: SKILL.md  reference.md
.claude/skills/common-observability/: SKILL.md
.claude/skills/common-security/: SKILL.md
.claude/skills/common-testing-conventions/: SKILL.md  examples.md  python.md  reference.md
.claude/skills/python-architecture/: SKILL.md  examples.md  reference.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/agents/: demo.code-reviewer.agent.md  demo.pr-feedback.agent.md  demo.refactor.agent.md  demo.tdd-coach.agent.md  demo.tdd-green.agent.md  demo.tdd-implement.agent.md  demo.tdd-red.agent.md  demo.tdd-refactor.agent.md
.github/prompts/: demo.create-adr.prompt.md  demo.create-skill.prompt.md  demo.create-weekly-tags.prompt.md  demo.pr-sync.prompt.md  demo.scaffold-feature.prompt.md  demo.smart-commit.prompt.md  demo.update-dependencies.prompt.md
.github/workflows/: markdownlint.yml  test.yml
data/docs/: S1.txt  S2.txt  S3.txt  S4.txt  S5.txt  S6.txt
docs/adr/: 0001-use-docs-adr-as-folder.md
docs/conventions/: AIAgentsAndSkills.md  CustomAgentsExplained.md  GitCommit.md  Markdown.md
src/: graph.py  llm.py  rag.py
tests/: test_graph.py  test_rag.py
(+8 files in other folders)
